[build-system]
requires = ["sip >=6, <7"]
build-backend = "sipbuild.api"

[tool.sip.metadata]
name = "pyro"

[tool.sip.project]
build-dir = "./pybuild"
builder-factory = "sipbuild.setuptools_builder"
sip-files-dir = "./sipyro"

[tool.sip.bindings.pyro]
extra-compile-args = ["-std=c++17"]
headers = ["pyro.h"]
include-dirs = ["./include", "/usr/local/include", "/usr/include/freetype2"]
libraries = ["pyro"]
library-dirs = ["./build/src"]
pep484-pyi = true
static = false