[build-system]
requires = ["sip >=6, <7"]
build-backend = "sipbuild.api"

[tool.sip.metadata]
name = "pyro"

[tool.sip.project]
build-dir = "./pybuild"
builder-factory = "sipbuild.setuptools_builder"
sip-files-dir = "./sipyro"
abi-version = "13.1"

[tool.sip.bindings.pyro]
extra-compile-args = ["-std=c++20"]
headers = ["pyro.h"]
include-dirs = ["./include", "/usr/local/include", "/usr/include/freetype2", "/usr/local/lib/python3.11/site-packages/numpy/core/include/", "./subprojects/eigen-3.4.0/"]
libraries = ["pyro"]
library-dirs = ["./build/src"]
pep484-pyi = true
static = false
