header_files = ['pyro/pyro.h',
                'pyro/pyro_sdl.h',
                'pyro/pyro_ray.h',
                'pyro/pyrocolor.h',
                'pyro/pyroconstants.h',
                'pyro/pyrographics.h',
                'pyro/pyroimage.h',
                'pyro/pyromath.h',
                'pyro/pyroshape.h',
                'pyro/pyrovector.h',
                'pyro/pyrographics_cairo.h',
                'pyro/pyrographics_raylib.h']

install_headers(header_files, subdir: 'pyro')