header_files = ['pyro/pyro.h',
                'pyro/sdl.h',
                'pyro/color.h',
                'pyro/constants.h',
                'pyro/graphics.h',
                'pyro/image.h',
                'pyro/math.h',
                'pyro/shape.h',
                'pyro/vector.h',
                'pyro/graphics_cairo.h']

install_headers(header_files, subdir: 'pyro')