[build-system]
requires = ["sip >=5, <6"]
build-backend = "sipbuild.api"

[tool.sip.metadata]
name = "pyro"

[tool.sip.bindings.pyro]
include-dirs = ["../include", "/usr/local/include", "/usr/include/freetype2"]
library-dirs = ["../build/src"]
extra-compile-args = ["-std=c++17"]
headers = ["pyro.h"]
libraries = ["pyro"]
