pyro_sources = ['pyro.cpp',
                'pyro_runner.cpp',
                'pyro_sdl.cpp',
                'pyro_ray.cpp',
                'pyrocolor.cpp', 
                'pyrofont.cpp',
                'pyrofont_impl.cpp',
                'pyrographics.cpp', 
                'pyrographics_cairo.cpp',
                'pyrographics_raylib.cpp',
                'pyroimage.cpp',
                'pyromath.cpp',
                'pyroshape.cpp',
                'pyrovector.cpp',
                'pyronoise.cpp',
                'pyrostring.cpp',
                'pyrotransformer.cpp',
                'opensimplexnoise.cpp']

pyrolib = shared_library('pyro', 
                         pyro_sources, 
                          include_directories: inc_dir,
                          dependencies: [libpng_dep,
                                         cairo_dep,
                                         libjpeg_dep,
                                         freetype_dep,
                                         sdl_dep,
                                         catch2.get_variable('catch2_dep'),
                                         gl_dep,
                                         glfw_dep,
                                         raylib_dep],
                          install: true)
