pyro_sources = ['pyro.cpp',
                'runner.cpp',
                'sdl.cpp',
                'color.cpp', 
                'font.cpp',
                'font_impl.cpp',
                'graphics.cpp', 
                'graphics_cairo.cpp',
                'image.cpp',
                'math.cpp',
                'shape.cpp',
                'vector.cpp',
                'noise.cpp',
                'string.cpp',
                'transformer.cpp',
                'opensimplexnoise.cpp']

pyrolib = shared_library('pyro', 
                         pyro_sources, 
                          include_directories: inc_dir,
                          dependencies: [libpng_dep, cairo_dep, libjpeg_dep, freetype_dep, sdl_dep, eigen_dep],
                          install: true)
